tdf#96515 sw Hide Whitespace: avoid creating unneeded page frames

(cherry picked from commit 2c23d4ee1e1370b20560e47db7efaeaac1d94b26)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx
	sw/source/core/layout/calcmove.cxx

Change-Id: I9b273543ccf2eaa87116c6e1475860e9e872c445